add and process properties, adjust view

--- a/src/main/resources/properties/lighten_up.properties
+++ b/src/main/resources/properties/lighten_up.properties
@@ -1,5 +1,10 @@
-colors=#000000,#ffffff
-symbols=lightbulb,0,1,2,3,4
-types=playable,unmutable
+defaultColor=#000000
+otherColors=#ffffff
 
-playableTypeComplex=true
+types=Type1:complex,Type0:unmutable
+
+symbols=S1:dot,S2:lightbulb
+
+characters=
+
+numbers=0,1,2,3,4
